--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive --exit"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
-    "@types/node": "^14.0.13"
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.13",
+    "chai": "^4.2.0",
+    "mocha": "^7.2.0",
+    "mockgoose": "^8.0.4",
+    "supertest": "^4.0.2"
   }
 }
